# predictive-inference-moe

bench-bundle/: SETUP-ON-LEGION.md
bench-bundle/bench-source/: CMakeLists.txt  moe-predictor-bench.cpp  moe_cuda_expert_cache.cu  moe_cuda_expert_cache.h  moe_cuda_layer_stream.cu  moe_layer_stream.h  moe_predictor.cpp  moe_predictor.h
bench-bundle/ggml-patches/: ggml-backend.cpp  ggml-backend.h
bench-bundle/predictor-weights/: extract_expert_offsets.py  qwen3_expert_offsets.json
bench-bundle/scripts/: cpu_ffn_bench.py  cpu_ffn_load.py
bench-bundle/sensitivity/: deepseek_v2_lite_sensitivity.json  qwen3_30b_a3b_sensitivity_heuristic.json  qwen3_measured_single.json
moe-advisor/data/user_history/: shreya_prompts.tsv  shreya_prompts_test.tsv  shreya_prompts_train.tsv
moe-advisor/docs/: llama_flow.md  warm_from_history_3070_result.md
moe-advisor/experiments/: lr_governor_sweep.py
moe-advisor/scripts/: aggregate_warm_vs_snap.py  bench_context_sweep.sh  bench_cpu_prewarm.sh  bench_mixtral_drop_caches.sh  bench_mixtral_ssd_regime.sh  bench_mixtral_user_history_prewarm.sh  bench_warm_vs_snap_loop.sh  build_per_prompt_oracle_profile.py  build_user_history_profile.py  compare_user_history_profiles.py  eval_mixtral_lr_recall.py  extract_expert_offsets.py  extract_user_history.py  moe-predictor-bench.cpp  moe_predictor_hook.cpp  moe_predictor_hook.h  moe_trace_csv_to_parquet.py  moe_warm_profile.cpp  moe_warm_profile.h  npy_to_warm_profile.py  predict_warm_history_hit_rate.py  prewarm_experts.py  split_user_history.py  train_mixtral_lr_from_trace.sh
moe-advisor/tools/llama-moe-trace/: CMakeLists.txt  moe-trace.cpp  setup_legion.sh
